# jormungandr

./: .gitignore  README.md  meson.build
src/: meson.build  settings_manager.py
src/core/: README.md
src/input/: README.md
src/node/: README.md  node.cpp  node.h
src/output/: meson.build
src/output/braille/: README.md
src/output/node/: OutputNode.cpp  OutputNode.h  meson.build
src/output/speech/: README.md
src/plugin_management/: README.md
src/plugins/: README.md
src/processor/: README.md
src/remote/: README.md
src/screen/: README.md
src/sound/: README.md
src/speech/: generic.h  meson.build
src/speech/generic/: generic.cpp  generic.h
tools/: debug-server.py
